[gd_scene load_steps=18 format=3 uid="uid://dm8pfg3wjkktn"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_cda01"]
[ext_resource type="Texture2D" uid="uid://bwv7nmp827wf8" path="res://assets/sprite/PNG/Default/blue_body_circle.png" id="2_f3mvf"]
[ext_resource type="Texture2D" uid="uid://cxyu040dcwlkr" path="res://assets/sprite/PNG/Default/face_a.png" id="3_730ij"]
[ext_resource type="Texture2D" uid="uid://1gptmyhlheip" path="res://assets/sprite/PNG/Default/red_body_square.png" id="3_mlhxm"]
[ext_resource type="Texture2D" uid="uid://dte18mhb6sgvi" path="res://assets/sprite/PNG/Default/yellow_body_rhombus.png" id="4_l1sao"]
[ext_resource type="Texture2D" uid="uid://c5si2n6cjpsdx" path="res://assets/sprite/PNG/Default/face_j.png" id="6_0rkvb"]
[ext_resource type="Texture2D" uid="uid://bf2qb5lxbicev" path="res://assets/sprite/PNG/Default/face_f.png" id="6_3gpkc"]
[ext_resource type="Texture2D" uid="uid://bfvh1ev3gjfa" path="res://assets/sprite/PNG/Default/face_b.png" id="7_fa81w"]
[ext_resource type="AudioStream" uid="uid://o53po26tcw3c" path="res://assets/sfx/explosion.wav" id="8_yohsw"]
[ext_resource type="AudioStream" uid="uid://c3y8bvkkrwrf" path="res://assets/sfx/coin.wav" id="10_k0agf"]
[ext_resource type="AudioStream" uid="uid://bu4bex5h2ajts" path="res://assets/sfx/switch.wav" id="12_wy5tr"]
[ext_resource type="PackedScene" uid="uid://ccrgnrtuwo3lf" path="res://scenes/delay_bar.tscn" id="13_kwfim"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vq858"]
size = Vector2(4.99107, 5.1464)

[sub_resource type="SpriteFrames" id="SpriteFrames_3xa1c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_f3mvf")
}],
"loop": true,
"name": &"circle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_mlhxm")
}],
"loop": true,
"name": &"square",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_l1sao")
}],
"loop": true,
"name": &"triangle",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ucwde"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_730ij")
}],
"loop": true,
"name": &"circle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_0rkvb")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_3gpkc")
}],
"loop": true,
"name": &"square",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_fa81w")
}],
"loop": true,
"name": &"triangle",
"speed": 5.0
}]

[sub_resource type="Curve" id="Curve_qdquq"]
_data = [Vector2(0.0955056, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.285714), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_sao81"]
_data = [Vector2(0.0730337, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.307692), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Player" type="CharacterBody2D"]
scale = Vector2(2.80501, 2.72035)
collision_layer = 2
collision_mask = 3
slide_on_ceiling = false
wall_min_slide_angle = 0.0
platform_on_leave = 2
script = ExtResource("1_cda01")
metadata/_edit_horizontal_guides_ = [-17.0]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8.49974e-08, 2.19107e-08)
shape = SubResource("RectangleShape2D_vq858")

[node name="Raycasts" type="Node2D" parent="."]
position = Vector2(-1.90735e-06, 0)

[node name="RayUp" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(1.90735e-06, -7.71959)

[node name="RayDown" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(1.90735e-06, 7.71959)

[node name="RayLeft" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(-7.4866, 0)

[node name="RayRight" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(7.48661, 0)

[node name="RayTopRight" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(5.70408, -4.7788)

[node name="RayBottomRight" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(4.63457, 5.514)

[node name="RayTopLeft" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(-5.70408, -4.7788)

[node name="RayBottomLeft" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(-4.63456, 5.514)

[node name="SwitchTimer" type="Timer" parent="."]

[node name="Body" type="AnimatedSprite2D" parent="."]
position = Vector2(-2.98023e-08, -5.96046e-08)
scale = Vector2(0.0623884, 0.06433)
sprite_frames = SubResource("SpriteFrames_3xa1c")
animation = &"circle"
autoplay = "circle"

[node name="Face" type="AnimatedSprite2D" parent="."]
position = Vector2(1.49012e-07, -7.45058e-09)
scale = Vector2(0.071301, 0.0760551)
sprite_frames = SubResource("SpriteFrames_ucwde")
animation = &"circle"
autoplay = "circle"

[node name="Explosion" type="CPUParticles2D" parent="."]
position = Vector2(-0.356505, -0.3676)
emitting = false
amount = 100
lifetime = 0.3
one_shot = true
speed_scale = 0.6
explosiveness = 1.0
emission_shape = 2
emission_sphere_radius = 4.88
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 79.8
scale_amount_min = 0.0
scale_amount_max = 5.0
scale_amount_curve = SubResource("Curve_qdquq")

[node name="DeathTimer" type="Timer" parent="."]

[node name="ExplosionSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_yohsw")
bus = &"SFX"

[node name="KeySFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_k0agf")
bus = &"SFX"

[node name="walk" type="CPUParticles2D" parent="."]
position = Vector2(0, 2.5732)
emitting = false
amount = 20
randomness = 1.0
gravity = Vector2(0, 0)
scale_amount_min = 2.0
scale_amount_max = 4.0
scale_amount_curve = SubResource("Curve_sao81")
color = Color(0.373, 0.569, 1, 1)

[node name="Switch" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_wy5tr")
volume_db = -4.685
bus = &"SFX"

[node name="HealthBar" parent="." instance=ExtResource("13_kwfim")]
offset_left = -0.356505
offset_top = -6.2492
offset_right = -0.356505
offset_bottom = -6.2492
scale = Vector2(0.0360132, 0.0376722)

[node name="KeyDropTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.5
autostart = true

[node name="WallDelay" type="Timer" parent="."]
wait_time = 0.001

[connection signal="timeout" from="SwitchTimer" to="." method="_onStateChangeTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="WallDelay" to="." method="_on_wall_delay_timeout"]
